--- a/Flights/src/gui/Forgot.fxml
+++ b/Flights/src/gui/Forgot.fxml
@@ -19,62 +19,45 @@
         <rowConstraints>
           <RowConstraints maxHeight="82.19998779296874" minHeight="10.0" prefHeight="82.19998779296874" valignment="BOTTOM" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="47.00000610351562" minHeight="10.0" prefHeight="24.60001220703124" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="47.00000610351562" minHeight="10.0" prefHeight="24.60001220703124" valignment="TOP" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <Label text="When were you born?">
-               <font>
-                  <Font name="Book Antiqua" size="24.0" />
-               </font>
-            </Label>
-            <Label text="  " GridPane.rowIndex="2">
+            <Label text="  " GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <GridPane hgap="10.0" GridPane.rowIndex="1">
+            <GridPane>
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="209.2000244140625" minWidth="10.0" prefWidth="208.80003662109374" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.20001220703125" minWidth="10.0" prefWidth="60.799963378906256" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="166.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="114.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TextField fx:id="tf_security_answer" alignment="CENTER" promptText="Answer" />
-                  <Button fx:id="button_enter" mnemonicParsing="false" prefHeight="26.0" prefWidth="64.0" text="Enter" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <GridPane GridPane.rowIndex="2">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane prefHeight="41.0" prefWidth="188.0" GridPane.columnIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints maxHeight="8.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <TextField fx:id="tf_username" alignment="CENTER" promptText="username" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     </children>
-                  </GridPane>
-                  <Label text="  " />
-                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#backToLogin" text="Back" />
+                  <Label text="When were you born?">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="tf_security_answer" alignment="CENTER" promptText="Answer" GridPane.columnIndex="1" />
+                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="tf_username" prefHeight="32.0" prefWidth="114.0" promptText="EnterUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
+            <Label fx:id="label_password_message" textFill="#ee0303" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
