--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AdminController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminController">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="39.199943542480476" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="179.1999755859375" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="51.99998779296875" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="166.40001220703124" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="102.4000244140625" minWidth="10.0" prefWidth="70.4000244140625" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="159.19997558593747" />
         </columnConstraints>
@@ -35,7 +35,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <Label text="Time:" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Label text="Arrive: " GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -45,7 +45,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <Label text="Date:" GridPane.rowIndex="2">
+            <Label prefHeight="18.0" prefWidth="50.0" text="Depart: " GridPane.rowIndex="2">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -60,39 +60,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="63.5999755859375" minWidth="10.0" prefWidth="63.5999755859375" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="41.20001220703125" minWidth="10.0" prefWidth="30.000012207031247" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="77.20001220703125" minWidth="10.0" prefWidth="62.79998779296875" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <ComboBox prefWidth="150.0" promptText="00" />
-                  <ComboBox prefWidth="150.0" promptText="00" GridPane.columnIndex="2" />
-                  <Label text=":" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="Book Antiqua Bold" size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-            </GridPane>
-            <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <ComboBox prefWidth="150.0" promptText="Month" visibleRowCount="12" />
-                  <ComboBox prefWidth="150.0" promptText="Day" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <Button mnemonicParsing="false" text="Add" translateX="170.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" text="Add" translateX="160.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -101,6 +69,8 @@
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField GridPane.columnIndex="3" />
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
