--- a/Flights/src/gui/Logout.fxml
+++ b/Flights/src/gui/Logout.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LogoutController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LogoutController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -28,12 +28,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button" mnemonicParsing="false" onAction="#goToLogin" prefHeight="26.0" prefWidth="50.0" text="Yes">
+                  <Button fx:id="yesButton" mnemonicParsing="false" onAction="#logOut" prefHeight="26.0" prefWidth="50.0" text="Yes">
                      <font>
                         <Font name="Book Antiqua" size="13.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="52.0" text="No" GridPane.columnIndex="1">
+                  <Button fx:id="noButon" mnemonicParsing="false" onAction="#notLogOut" prefHeight="26.0" prefWidth="52.0" text="No" GridPane.columnIndex="1">
                      <font>
                         <Font name="Book Antiqua" size="13.0" />
                      </font>
