--- a/Flights/src/gui/Logout.fxml
+++ b/Flights/src/gui/Logout.fxml
@@ -28,7 +28,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="yesButton" mnemonicParsing="false" onAction="#logOut" prefHeight="26.0" prefWidth="50.0" text="Yes">
+                  <Button fx:id="yesButton" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="50.0" text="Yes">
                      <font>
                         <Font name="Book Antiqua" size="13.0" />
                      </font>
