--- a/Flights/src/gui/Searches.fxml
+++ b/Flights/src/gui/Searches.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchController">
    <children>
       <GridPane>
@@ -51,7 +50,7 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" text="Log Out" translateY="-50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" translateY="-50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
