--- a/Flights/src/gui/Account.fxml
+++ b/Flights/src/gui/Account.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -24,12 +26,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="67.0" text="Log Out" GridPane.columnIndex="2">
+            <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#logOut" prefHeight="26.0" prefWidth="67.0" text="Log Out" GridPane.columnIndex="2">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="64.0" text="Back to Search" textAlignment="CENTER" wrapText="true">
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="42.0" prefWidth="64.0" text="Back to Search" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -51,12 +53,12 @@
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" text="Enter" GridPane.columnIndex="3">
+                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#delete" text="Enter" GridPane.columnIndex="3">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
-                  <TextField promptText="Flight ID" GridPane.columnIndex="2" />
+                  <TextField fx:id="flightId" promptText="Flight ID" GridPane.columnIndex="2" />
                </children>
             </GridPane>
             <Label text="Your Flights" translateX="110.0" GridPane.columnIndex="1">
@@ -64,6 +66,17 @@
                   <Font name="Book Antiqua Bold" size="36.0" />
                </font>
             </Label>
+            <TableView fx:id="yourFlight" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+            <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#refresh" prefHeight="26.0" prefWidth="63.0" text="Refresh" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
          </children>
          <StackPane.margin>
             <Insets />
