--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -22,7 +22,7 @@
           <RowConstraints maxHeight="251.60003967285155" minHeight="10.0" prefHeight="133.00000190734863" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="170.40000000000003" minHeight="10.0" prefHeight="46.799960327148426" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="170.40000000000003" minHeight="10.0" prefHeight="46.799960327148426" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="120.79996337890623" minHeight="10.0" prefHeight="82.39999999999998" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="120.79996337890623" minHeight="10.0" prefHeight="82.39999999999998" valignment="TOP" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Log In">
@@ -57,7 +57,7 @@
                   <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
                </padding>
             </GridPane>
-            <GridPane hgap="10.0" vgap="10.0" GridPane.rowIndex="2">
+            <GridPane hgap="10.0" vgap="5.0" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -71,19 +71,35 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="130.0" text="Log In">
+                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="124.0" text="Log In">
                      <font>
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
                   </Button>
                </children>
             </GridPane>
-            <Button fx:id="button_register" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="4" GridPane.valignment="TOP">
-               <font>
-                  <Font name="Book Antiqua" size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="button_forgot_password" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password" GridPane.rowIndex="3">
+            <GridPane hgap="10.0" GridPane.rowIndex="3">
+              <columnConstraints>
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="ForgotButton" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.columnIndex="1" GridPane.valignment="TOP">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+            <Button fx:id="OtherButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="119.0" text="Admin Log In" GridPane.rowIndex="4">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
