--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -16,7 +16,7 @@
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="51.99998779296875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="166.40001220703124" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="166.40001220703124" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="102.4000244140625" minWidth="10.0" prefWidth="70.4000244140625" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="159.19997558593747" />
         </columnConstraints>
@@ -60,7 +60,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" text="Add" translateX="160.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" text="Add" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -71,11 +71,19 @@
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" text="Quit" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Book Antiqua" size="12.0" />
-               </font>
-            </Button>
+            <GridPane hgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.60003662109375" minWidth="10.0" prefWidth="105.60003662109375" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="79.20001220703125" minWidth="10.0" prefWidth="62.39996337890625" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField promptText="Flight ID" />
+                  <Button mnemonicParsing="false" prefWidth="54.0" text="Delete" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
          </children>
       </GridPane>
    </children>
