--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -18,7 +18,7 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="51.99998779296875" />
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="166.40001220703124" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="102.4000244140625" minWidth="10.0" prefWidth="70.4000244140625" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="159.19997558593747" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="159.19997558593747" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -60,7 +60,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" text="Add" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" text="Add" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -84,6 +84,11 @@
                   <Button mnemonicParsing="false" prefWidth="54.0" text="Delete" GridPane.columnIndex="1" />
                </children>
             </GridPane>
+            <Button mnemonicParsing="false" onAction="#back" text="Log Out" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
    </children>
